// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Ins checkGrammar 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkGrammar 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkGrammar 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkGrammar 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkHighlight 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkHighlight 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkHighlight 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkHighlight 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkSpaces 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkSpaces 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkSpaces 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins checkSpaces 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins className 1`] = `
<ins
  className="uu5-bricks-ins my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins content 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</ins>
`;

exports[`UU5.Bricks.Ins content 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</ins>
`;

exports[`UU5.Bricks.Ins content 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</ins>
`;

exports[`UU5.Bricks.Ins content 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</ins>
`;

exports[`UU5.Bricks.Ins controlled 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins controlled 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins controlled 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins controlled 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins default props 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins disabled 1`] = `
<ins
  className="uu5-bricks-ins uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</ins>
`;

exports[`UU5.Bricks.Ins disabled 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins disabled 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins disabled 4`] = `
<ins
  className="uu5-bricks-ins uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</ins>
`;

exports[`UU5.Bricks.Ins docKit examples UU5.Bricks.Ins should render without crash 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="inserted"
  />
</ins>
`;

exports[`UU5.Bricks.Ins dynamic 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins dynamic 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins dynamic 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins dynamic 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins hidden 1`] = `
<ins
  className="uu5-bricks-ins uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins hidden 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins hidden 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins hidden 4`] = `
<ins
  className="uu5-bricks-ins uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins id 1`] = `
<ins
  className="uu5-bricks-ins"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins ignoreHTML 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins ignoreHTML 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins ignoreHTML 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins ignoreHTML 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins mainAttrs 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins name 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins noIndex 1`] = `
<ins
  className="uu5-bricks-ins uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins noIndex 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins noIndex 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins noIndex 4`] = `
<ins
  className="uu5-bricks-ins uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins selected 1`] = `
<ins
  className="uu5-bricks-ins uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins selected 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins selected 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins selected 4`] = `
<ins
  className="uu5-bricks-ins uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins style 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Ins style 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Ins style 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Ins style 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Ins textCorrector 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins textCorrector 2`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins textCorrector 3`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins textCorrector 4`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Ins tooltip 1`] = `
<ins
  className="uu5-bricks-ins"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
